fromenv/tests/ui/01-private-struct.stderr
error: FromEnv derive requires a public struct
 --> tests/ui/01-private-struct.rs:4:8
  |
4 | struct Config {}
  |        ^^^^^^
