fromenv/tests/ui/01-private-struct.rs
use fromenv::FromEnv;

#[derive(FromEnv)]
struct Config {}

fn main() {}
